# KPredict

./: .clang-format  CMakeLists.txt  README.md
cmake/: utils.cmake
docker/: Dockerfile  container_start.sh  image_build.sh
include/memory/: buffer.h  memory_allocator.h
include/utils/: utils.h  utils_cpu.h  utils_cuda.h  utils_enum.h  utils_macro.h
src/: CMakeLists.txt  main.cc
src/memory/: buffer.cc  cpu_memory_allocator.cc  device_memory_allocator.cc  host_memory_allocator.cc  memory_allocator.cc  memory_allocator.h
test/: CMakeLists.txt  test_main.cc  test_memory.cc
